@@ -30,7 +30,7 @@ NON-TECH
    *. Fighter -- AUTOGUARD can start a little "Guarding" prog for, say, 10 rl minutes.
    *. Classes with insufficient unique skills:
         *. Ranger        : +3
-                         : Speak with Animals
+                         : 
                          :
                          :
         *. Paladin       : +6
