@@ -55,7 +55,8 @@ public class Song_Comprehension extends Song
 		&&(msg.sourceMessage()!=null)
 		&&(msg.tool() instanceof Ability)
 		&&((((Ability)msg.tool()).classificationCode()&Ability.ALL_ACODES)==Ability.ACODE_LANGUAGE)
-		&&(((MOB)affected).fetchEffect(msg.tool().ID())==null))
+		&&(((MOB)affected).fetchEffect(msg.tool().ID())==null)
+		&&(msg.source().charStats().getMyRace().racialAbilities(msg.source()).find(msg.tool().ID())==null))
 		{
 			final String str=CMStrings.getSayFromMessage(msg.sourceMessage());
 			if(str!=null)
