@@ -15,7 +15,6 @@ import com.planet_ink.coffee_mud.Locales.interfaces.*;
 import com.planet_ink.coffee_mud.MOBS.interfaces.*;
 import com.planet_ink.coffee_mud.Races.interfaces.*;
 
-
 import java.util.*;
 
 /*
@@ -91,7 +90,9 @@ public class Thief_Comprehension extends ThiefSkill
 		&&(msg.sourceMessage()!=null)
 		&&(msg.tool() instanceof Ability)
 		&&((((Ability)msg.tool()).classificationCode()&Ability.ALL_ACODES)==Ability.ACODE_LANGUAGE)
-		&&(((MOB)affected).fetchEffect(msg.tool().ID())==null))
+		&&(((MOB)affected).fetchEffect(msg.tool().ID())==null)
+		&&(!CMLib.flags().isAnimalIntelligence(msg.source()))
+		&&(msg.source().charStats().getMyRace().racialAbilities(msg.source()).find(msg.tool().ID())==null))
 		{
 			final String str=CMStrings.getSayFromMessage(msg.sourceMessage());
 			if(str!=null)
