@@ -931,6 +931,14 @@ balance of nature.  Extreme thoughts of good and evil will slowly fade \
 from his or her mind with each passing minute.  Willful movements or \
 speaking may break the communion.
 
+CHANT_SPEAKWITHANIMALS=CHANT_SPEAK_WITH_ANIMALS
+CHANT_SPEAK_WITH_ANIMALS=<ABILITY>\
+Usage    : CHANT "SPEAK WITH ANIMALS"\n\r\
+Example  : chant "speak with animals"\n\r\
+This chant will allow the druid to speak with any animals he or she happens \
+to encounter, and have them intelligibly speak back.  Intelligent creatures, and \
+creatures without their own language are not intelligible.
+
 CHANT_STARGAZING=CHANT_STAR_GAZING
 CHANT_STAR_GAZING=<ABILITY>\
 Usage    : CHANT "STAR GAZING"\n\r\
